# AI-agent-for-Feature-Engineering

./: .env.example  .gitignore  README.md  agent.md  pyproject.toml  run.py  script_for_del_target.py
.claude/: settings.local.json
.test/: a.ipynb
.test/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
.test/catboost_info/learn/: events.out.tfevents
2nd_approach/: metric_m.py  metrics.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: test.csv
data/: readme.txt  test.csv  train.csv
docs/: TEAM_GUIDE.md
materials/: extra datasets links.txt
materials/data/: README.md
output/: test.csv  train.csv
output/catboost_tmp/: catboost_training.json  learn_error.tsv  time_left.tsv
output/catboost_tmp/learn/: events.out.tfevents
src/: baseline.py
src/agents/: analyst.py  coder.py  critic.py  generator.py  orchestrator.py
src/mas/: __init__.py  config.py  context.py  llm.py  logging_setup.py  metrics.py  paths.py  prompts.py  settings.py
src/mas/agents/: __init__.py  analyst.py  answer_agent.py  base.py  dataset_agent.py  exporter.py  feature_engineer.py  feature_generation_agent.py  feature_selection_agent.py  protocol.py  selector.py
src/mas/domain/: __init__.py  models.py  state.py
src/mas/llm/: __init__.py  client.py
src/mas/pipeline/: __init__.py  submission.py
src/tools/: analyst_tools.py
src/utils/: baseline.py  check_submission.py  retry.py  scoring.py
tests/: test_coder.py
(+12 files in other folders)
