[project]
name = "sber-mas"
version = "0.1.0"
description = "MAS feature generation (GigaChain / GigaChat)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain-core>=0.3.0",
    "langchain-gigachat>=0.5.0",
    "python-dotenv>=1.0.0",
    "catboost>=1.2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mas*"]
